--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "@types/jest": "^29.5.14",
     "eslint": "^9.18.0",
     "husky": "^9.1.7",
