--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -2,7 +2,7 @@ name: Publish Package
 
 on:
   workflow_run:
-    workflows: ["Code Quality Checks"]
+    workflows: ['Code Quality Checks']
     types:
       - completed
     branches:
