--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,13 +1,19 @@
 {
   "branches": ["main"],
   "plugins": [
-    ["@semantic-release/commit-analyzer", {
-      "preset": "conventionalcommits"
-    }],
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "preset": "conventionalcommits"
+      }
+    ],
     "@semantic-release/release-notes-generator",
     "@semantic-release/npm",
-    ["@semantic-release/github", {
-      "assets": "dist/*.js"
-    }]
+    [
+      "@semantic-release/github",
+      {
+        "assets": "dist/*.js"
+      }
+    ]
   ]
-} 
+}
