--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
     "@types/jest": "^29.5.14",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "eslint": "^9.18.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
